force-app/main/default/objects/QB_Log__c/QB_Log__c.object-meta.xml
<CustomObject>
    <label>QB Log</label>
    <nameField>
        <displayFormat>QBLog-{0000}</displayFormat>
        <label>QB Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>