force-app/main/default/objects/QB_Log__c/fields/Callout_Log__c.field-meta.xml
<CustomField>
    <fullName>Callout_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Callout Log</label>
    <type>Checkbox</type>
</CustomField>