force-app/main/default/objects/QB_Log__c/fields/Exception_Message_c__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message_c__c</fullName>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>