force-app/main/default/objects/QB_Log__c/fields/Helper__c.field-meta.xml
<CustomField>
    <fullName>Helper__c</fullName>
    <label>Helper</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>