force-app/main/default/objects/QB_Log__c/fields/Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Request_Endpoint__c</fullName>
    <label>Request Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>