force-app/main/default/objects/QB_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Helper__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>Callout_Log__c</columns>
    <columns>Data_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Callout_Log__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ok</value>
    </filters>
    <label>All</label>
</ListView>