force-app/main/default/objects/QB_Log__c/listViews/Todays_Exception_Logs.listView-meta.xml
<ListView>
    <fullName>Todays_Exception_Logs</fullName>
    <columns>NAME</columns>
    <columns>Callout_Log__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Callout_Log__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Exception Logs</label>
</ListView>